--- a/projects.json
+++ b/projects.json
@@ -14,10 +14,40 @@
     },
       {
       "image":"https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/screen_ediehomep.png",
-      "title":"Portfolio Page",
+      "title":"Edie Homepage",
       "demoURL":"https://wy-chan.github.io/devchallenges_EdieHomepage/",
       "codeURL":"https://github.com/wy-chan/devchallenges_EdieHomepage/"
     },
-    
+     {
+      "image":"https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/screen_mygalleryp.png",
+      "title":"My Gallery",
+      "demoURL":"https://wy-chan.github.io/devchallenges_MyGalleryPage/",
+      "codeURL":"https://github.com/wy-chan/devchallenges_MyGalleryPage/"
+    },
+      {
+      "image":"https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/screen_recipep.png",
+      "title":"Recipe Page",
+      "demoURL":"https://wy-chan.github.io/devchallenges_RecipePage/",
+      "codeURL":"https://github.com/wy-chan/devchallenges_RecipePage/"
+    },
+      {
+      "image":"https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/interiorconsultantp.png",
+      "title":"Interior Consultant Page",
+      "demoURL":"https://wy-chan.github.io/devchallenges_InteriorConsultantPage/",
+      "codeURL":"https://github.com/wy-chan/devchallenges_InteriorConsultantPage/"
+    },
+     {
+      "image":"https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/myteamp.png",
+      "title":"My Team Page",
+      "demoURL":"https://wy-chan.github.io/devchallenges_myteampage/",
+      "codeURL":"https://github.com/wy-chan/devchallenges_myteampage/"
+    },
+      {
+      "image":"https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/screen_404notfoundp.png",
+      "title":"404 Not Found Page",
+      "demoURL":"https://wy-chan.github.io/devchallenges_404notfoundpage/",
+      "codeURL":"https://github.com/wy-chan/devchallenges_404notfoundpage/"
+    }
+     
   ]
 }
