--- a/projects.json
+++ b/projects.json
@@ -32,7 +32,7 @@
     },
       {
       "image":"https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/screen_interiorconsultantp.png",
-      "title":"Interior Consultant Page",
+      "title":"Interior Consultant",
       "demoURL":"https://wy-chan.github.io/devchallenges_InteriorConsultantPage/",
       "codeURL":"https://github.com/wy-chan/devchallenges_InteriorConsultantPage/"
     },
