--- a/projects.json
+++ b/projects.json
@@ -5,56 +5,64 @@
       "title":"Portfolio Page",
       "demoURL":"https://wy-chan.github.io/devchallenges_Portfolio/",
       "codeURL":"https://github.com/wy-chan/devchallenges_Portfolio/",
-      "tag":"#Responsive #HTML #CSS #JavaScript"
+      "tag":"#Responsive #HTML #CSS #JavaScript #jQuery",
+      "text":"In this project, I work with HTML, CSS and JavaScript to create a responsive portfolio page. The design is from devchallenge.io"
     },
       {
       "image":"https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/screen_checkoutp.png",
       "title":"Checkout Page",
       "demoURL":"https://wy-chan.github.io/devchallenges_CheckoutPage/",
       "codeURL":"https://github.com/wy-chan/devchallenges_CheckoutPage/",
-      "tag":"#Responsive #HTML #CSS #JavaScript"
+      "tag":"#Responsive #HTML #CSS #JavaScript",
+      "text":"In this project, I work with HTML, CSS and JavaScript to create a responsive checkout page. The design is from devchallenge.io"
     },
       {
       "image":"https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/screen_ediehomep.png",
       "title":"Edie Homepage",
       "demoURL":"https://wy-chan.github.io/devchallenges_EdieHomepage/",
       "codeURL":"https://github.com/wy-chan/devchallenges_EdieHomepage/",
-      "tag":"#Responsive #HTML #CSS #JavaScript"
+      "tag":"#Responsive #HTML #CSS #JavaScript",
+      "text":"In this project, I work with HTML, CSS and JavaScript to create a responsive page. The design is from devchallenge.io"
     },
      {
       "image":"https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/screen_mygalleryp.png",
       "title":"My Gallery",
       "demoURL":"https://wy-chan.github.io/devchallenges_MyGalleryPage/",
       "codeURL":"https://github.com/wy-chan/devchallenges_MyGalleryPage/",
-      "tag":"#Responsive #HTML #CSS"
+      "tag":"#Responsive #HTML #CSS",
+      "text":"In this project, I work with HTML and CSS to create a responsive gallery page. The design is from devchallenge.io"
     },
       {
       "image":"https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/screen_recipep.png",
       "title":"Recipe Page",
       "demoURL":"https://wy-chan.github.io/devchallenges_RecipePage/",
       "codeURL":"https://github.com/wy-chan/devchallenges_RecipePage/",
-      "tag":"#Responsive #HTML #CSS"
+      "tag":"#Responsive #HTML #CSS",
+      "text":"In this project, I work with HTML and CSS to create a responsive recipe page. The design is from devchallenge.io"
     },
       {
       "image":"https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/screen_interiorconsultantp.png",
       "title":"Interior Consultant",
       "demoURL":"https://wy-chan.github.io/devchallenges_InteriorConsultantPage/",
       "codeURL":"https://github.com/wy-chan/devchallenges_InteriorConsultantPage/",
-      "tag":"#Responsive #HTML #CSS #JavaScript"
+      "tag":"#Responsive #HTML #CSS #JavaScript",
+      "text":"In this project, I work with HTML, CSS and JavaScript to create a responsive page. The design is from devchallenge.io"
     },
      {
       "image":"https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/screen_myteamp.png",
       "title":"My Team Page",
       "demoURL":"https://wy-chan.github.io/devchallenges_myteampage/",
       "codeURL":"https://github.com/wy-chan/devchallenges_myteampage/",
-      "tag":"#Responsive #HTML #CSS"
+      "tag":"#Responsive #HTML #CSS",
+      "text":"In this project, I work with HTML and CSS to create a responsive page. The design is from devchallenge.io"
     },
       {
       "image":"https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/screen_404notfoundp.png",
       "title":"404 Not Found Page",
       "demoURL":"https://wy-chan.github.io/devchallenges_404notfoundpage/",
       "codeURL":"https://github.com/wy-chan/devchallenges_404notfoundpage/",
-      "tag":"#Responsive #HTML #CSS"
+      "tag":"#Responsive #HTML #CSS",
+      "text":"In this project, I work with HTML and CSS to create a responsive page. The design is from devchallenge.io"
     }
      
   ]
